manifests/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: taskapp
spec:
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
      name: http
  selector:
    app: backend
  type: ClusterIP
